--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Saver</string>
+    <string name="add">Add</string>
+    <string name="refresh">Refresh</string>
 </resources>
